Project2/force-app/main/default/objects/Answer__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <formula>QuestionNumber__r.A__c</formula>
    <label>A</label>
    <type>Text</type>
</CustomField>