Project2/force-app/main/default/objects/Answer__c/fields/B__c.field-meta.xml
<CustomField>
    <fullName>B__c</fullName>
    <formula>QuestionNumber__r.B__c</formula>
    <label>B</label>
    <type>Text</type>
</CustomField>