Project2/force-app/main/default/objects/Answer__c/fields/Choice__c.field-meta.xml
<CustomField>
    <fullName>Choice__c</fullName>
    <label>Choice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>