Project2/force-app/main/default/objects/Answer__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <formula>QuestionNumber__r.D__c</formula>
    <label>D</label>
    <type>Text</type>
</CustomField>