Project2/force-app/main/default/objects/Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <formula>QuestionNumber__r.Question__c</formula>
    <label>Question</label>
    <type>Text</type>
</CustomField>