Project2/force-app/main/default/objects/Answer__c/fields/QuestionNumber__c.field-meta.xml
<CustomField>
    <fullName>QuestionNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuestionNumber</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>