Project2/force-app/main/default/objects/Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QuestionNumber__c</columns>
    <columns>IsCorrect__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>